--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,22 +14,27 @@
     "@phosphor-icons/react": "^2.1.7",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@tanstack/react-query": "^5.59.16",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "inventarioweb": "file:",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.447.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.10",
     "react-hook-form": "^7.53.1",
     "react-router-dom": "^6.27.0",
+    "react-toastify": "^10.0.6",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
-    "@types/node": "^22.7.4",
+    "@types/js-cookie": "^3.0.6",
+    "@types/node": "^22.8.1",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
